fix descriptions to reflect current timing

--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
                   Martial Dance
                 </h6><div class="break"></div>
                 <p>
-                Ripples is my senior production game that I am currently working on with two designers, three producers, an artist, and two other programmers. It is an elegant, stylish action game for one or two players. Players play as mathematical symbols, like Theta and Delta, dueling on a watery plane. Each encounter is set to a musical track. The characters jump to the beat of the track, and dance around in simultaneous defence and offense. When the characters land, they create a ripple in the surface of the water. If you hit your opponents ripple, you take damage. The characters have unique abilities based on their commong mathematical usage. For example, Delta usually stands for rate of change, so the Delta character has a special ripple that Delta can shrink and expand at will.
+                Ripples was my senior project, that I worked on with two designers, three producers, an artist, and two other programmers. It is an elegant, stylish action game for one or two players. Players play as mathematical symbols, like Theta and Delta, dueling on a watery plane. Each encounter is set to a musical track. The characters jump to the beat of the track, and dance around in simultaneous defence and offense. When the characters land, they create a ripple in the surface of the water. If you hit your opponents ripple, you take damage. The characters have unique abilities based on their commong mathematical usage. For example, Delta usually stands for rate of change, so the Delta character has a special ripple that Delta can shrink and expand at will.
                 </p><h6>
                   Chill Out and Freak Out
                 </h6><div class="break"></div><p>
@@ -563,7 +563,7 @@
                   Speed Kills
                 </h6><div class="break"></div>
                 <p>
-                Vicious Orb is a project that I am currently working on alone (hence the <a href="http://braid-game.com">Tim</a> sprites). Vicious orb is about leaping into the air, grabbing a ball made of a highly instable material, and blasting it at your friend before your feet touch the ground. Vicious orb is about playing basketball with a nuclear bomb. Vicious orb is what CERN scientists do during their lunch hour. In Vicious Orb I am trying to make a hilariously fun, competitive, local multiplayer game, becuase those are the kinds of games I like to play.
+                Vicious Orb is a pet project of mine (hence the <a href="http://braid-game.com">Tim</a> sprites). Vicious orb is about leaping into the air, grabbing a ball made of a highly instable material, and blasting it at your friend before your feet touch the ground. Vicious orb is about playing basketball with a nuclear bomb. Vicious orb is what CERN scientists do during their lunch hour. In Vicious Orb I am trying to make a hilariously fun, competitive, local multiplayer game, becuase those are the kinds of games I like to play.
                 </p><h6>
                   Making it Juicy
                 </h6><div class="break"></div><p>
