--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <section class="clearfix">
               <div class="g3">
                 <div class="photo">
-                  <img src="http://i.imgur.com/1pyPWHX.png" alt="David Karr Johnston">
+                  <img src="images/face_close_mirror.jpg" alt="David Karr Johnston">
                 </div>
                 <div class="info">
                   <h2>
