Remove skill bars and replace with bullets

--- a/index.html
+++ b/index.html
@@ -310,34 +310,43 @@
                   <h5>
                     Tech
                   </h5>
-                  <div class="meter emerald">
-                    <span style="width: 85%"><span>Visual Studio</span></span>
-                  </div>
-                  <div class="meter carrot">
-                    <span style="width: 85%"><span>Unreal 4</span></span>
-                  </div>
-                  <div class="meter asbestos">
-                    <span style="width: 80%"><span>Unity</span></span>
-                  </div>
-                  <div class="meter wisteria">
-                    <span style="width: 75%"><span>Git/SVN/Perforce</span></span>
-                  </div>
-                  <div class="meter sunflower">
-                    <span style="width: 66.6%"><span>VIM</span></span>
-                  </div>
-                  <div class="break"></div>
+                  <ul>
+                    <li>
+                      Unreal 4
+                    </li>
+                    <li>
+                      Unity
+                    </li>
+                    <li>
+                      Visual Studio
+                    </li>
+                    <li>
+                      VIM
+                    </li>
+                    <li>
+                      Git
+                    </li>
+                    <li>
+                      Perforce
+                    </li>
+                    <li>
+                      SVN
+                    </li>
+                  </ul>
                   <h5>
                     Programming Languages
                   </h5>
-                  <div class="meter emerald">
-                    <span style="width: 90%"><span>C++</span></span>
-                  </div>
-                  <div class="meter carrot">
-                    <span style="width: 80%"><span>C#</span></span>
-                  </div>
-                  <div class="meter asbestos">
-                    <span style="width: 60%"><span>VBA</span></span>
-                  </div>
+                  <ul>
+                    <li>
+                      C++
+                    </li>
+                    <li>
+                      C#
+                    </li>
+                    <li>
+                      VBA
+                    </li>
+                  </ul>
                   <h5>
                     <a href="DavidJohnstonGameProgrammerResume.pdf">Download Resume</a>
                   </h5>
