change about section

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     Game Programmer
                   </h4>
                   <p>
-                  Hi! I'm a game programmer currently living in Brooklyn, NY. I am into design as well, and have a lot of fun with UI programming, though I like all kinds of programming. I love math, literature, <a href="http://nuts4nuts.com/" target="_blank">Nuts4Nuts</a>, writing implements and Prince. I get excited about tiny things. My life's goal is to raise a child near <a href="http://www.play-scapes.com/play-design/contemporary-design/woodthorpe-grange-playground-keita-takahashi-nottingham-uk-proposed/" target="_blank">Keita Takahashi's eventual playground.</a>
+                  Hi! I'm a game programmer currently living in Brooklyn, NY. I love math, literature, <a href="http://nuts4nuts.com/" target="_blank">Nuts4Nuts</a>, writing implements and Prince. I get excited about tiny things. My life's goal is to raise a child near <a href="http://www.play-scapes.com/play-design/contemporary-design/woodthorpe-grange-playground-keita-takahashi-nottingham-uk-proposed/" target="_blank">Keita Takahashi's eventual playground.</a>
                   </p>
                 </div>
               </div>
