Change some wording in Ripples and Infection

--- a/index.html
+++ b/index.html
@@ -475,11 +475,11 @@
                   Human Resources
                 </h6><div class="break"></div>
                 <p>
-                Infection was my junior production project that I was working on with an <a href="http://www.nickcomeau.com">artist</a>, producer, designer, and programmer. It's a two player asymmetrical abstract strategy game, with drafting. One player plays as human immune system cells, and one player plays as invasive agents, such as bacteria and viruses. Each team has five pieces, which all have unique abilities. In the first stage, players snake-draft three pieces, and place them in their starting zones. Then they are given two low power pieces (like pawns), and they start the tactics stage where they fight over the board. The immune cells' goal is to wipe out the invaders, while the invaders' goal is to infect a certain percentage of the board.
+                Infection was developed in the fall of 2015 with an <a href="http://www.nickcomeau.com">artist</a>, producer, designer, and two programmers. It's a two player asymmetrical abstract strategy game, with drafting. One player plays as human immune system cells, and one player plays as invasive agents, such as bacteria and viruses. Each team has five pieces, which all have unique abilities. In the first stage, players snake-draft three pieces, and place them in their starting zones. Then they are given two low power pieces (like pawns), and they start the tactics stage where they fight over the board. The immune cells' goal is to wipe out the invaders, while the invaders' goal is to infect a certain percentage of the board.
                 </p><h6>
                   Teaching the Player
                 </h6><div class="break"></div><p>
-                Working on infection taught me a great deal about presenting information to the player. We were trying to make an elegant abstract strategy game, and in doing so we focused on making every bit of information clear, yet inconspicuous. We worked a lot on non-textual cues. For instance, we repeatedly found in testing that players were having problems knowing whose turn it was, and which pieces could move. We didn't want to throw around popups every second saying exactly what was happening, but we did want it to be clear. In the final form of the game, just about everything related to each player lights up when it's their turn, and pieces have two different effects indicating that they can move. By our final presentation, players were starting to get the message.
+                Working on infection taught me a great deal about presenting information to the player. We were trying to make an elegant abstract strategy game, and in doing so we focused on making every bit of information clear, yet inconspicuous. We worked a lot on non-textual cues. For instance, we repeatedly found in testing that players were having problems knowing whose turn it was, and which pieces could move. We didn't want to throw around popups every second saying exactly what was happening, but we did want it to be clear. In the final form of the game, just about everything related to each player lights up when it's their turn, and pieces have two different effects indicating that they can move. By the end of production, players were cruising through turns easily.
                 </p>
               </div>
               <div class="g1">
@@ -522,7 +522,7 @@
                   Martial Dance
                 </h6><div class="break"></div>
                 <p>
-                Ripples was my senior project, that I worked on with two designers, three producers, an artist, and two other programmers. It is an elegant, stylish action game for one or two players. Players play as mathematical symbols, like Theta and Delta, dueling on a watery plane. Each encounter is set to a musical track. The characters jump to the beat of the track, and dance around in simultaneous defence and offense. When the characters land, they create a ripple in the surface of the water. If you hit your opponents ripple, you take damage. The characters have unique abilities based on their commong mathematical usage. For example, Delta usually stands for rate of change, so the Delta character has a special ripple that Delta can shrink and expand at will.
+                Ripples was developed in 2016, by a team of two designers, three producers, an artist, and three programmers. It is an elegant, stylish action game for one or two players. Players play as mathematical symbols, like Theta and Delta, dueling on a watery plane. Each encounter is set to a musical track. The characters jump to the beat of the track, and dance around in simultaneous defence and offense. When the characters land, they create a ripple in the surface of the water. If you hit your opponents ripple, you take damage. The characters have unique abilities based on their commong mathematical usage. For example, Delta usually stands for rate of change, so the Delta character has a special ripple that she can shrink and expand at will.
                 </p><h6>
                   Chill Out and Freak Out
                 </h6><div class="break"></div><p>
@@ -546,7 +546,7 @@
                       Developed custom beat matching algorithm to allow users to play to their own tracks.
                     </li>
                     <li>
-                      Published on PC and Android.
+                      Published on Android.
                     </li>
                   </ul>
                 </div>
