Remove a comma and change more wording in Infection

--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
                   Human Resources
                 </h6><div class="break"></div>
                 <p>
-                Infection was developed in the fall of 2015 with an <a href="http://www.nickcomeau.com">artist</a>, producer, designer, and two programmers. It's a two player asymmetrical abstract strategy game, with drafting. One player plays as human immune system cells, and one player plays as invasive agents, such as bacteria and viruses. Each team has five pieces, which all have unique abilities. In the first stage, players snake-draft three pieces, and place them in their starting zones. Then they are given two low power pieces (like pawns), and they start the tactics stage where they fight over the board. The immune cells' goal is to wipe out the invaders, while the invaders' goal is to infect a certain percentage of the board.
+                Infection was developed in the fall of 2015 by a team of two programmers, an <a href="http://www.nickcomeau.com">artist</a>, a producer, and a designer. It's a two player asymmetrical abstract strategy game, with drafting. One player plays as human immune system cells, and one player plays as invasive agents, such as bacteria and viruses. Each team has five pieces, which all have unique abilities. In the first stage, players snake-draft three pieces, and place them in their starting zones. Then they are given two low power pieces (like pawns), and they start the tactics stage where they fight over the board. The immune cells' goal is to wipe out the invaders, while the invaders' goal is to infect a certain percentage of the board.
                 </p><h6>
                   Teaching the Player
                 </h6><div class="break"></div><p>
@@ -522,7 +522,7 @@
                   Martial Dance
                 </h6><div class="break"></div>
                 <p>
-                Ripples was developed in 2016, by a team of two designers, three producers, an artist, and three programmers. It is an elegant, stylish action game for one or two players. Players play as mathematical symbols, like Theta and Delta, dueling on a watery plane. Each encounter is set to a musical track. The characters jump to the beat of the track, and dance around in simultaneous defence and offense. When the characters land, they create a ripple in the surface of the water. If you hit your opponents ripple, you take damage. The characters have unique abilities based on their commong mathematical usage. For example, Delta usually stands for rate of change, so the Delta character has a special ripple that she can shrink and expand at will.
+                Ripples was developed in 2016 by a team of two designers, three producers, an artist, and three programmers. It is an elegant, stylish action game for one or two players. Players play as mathematical symbols, like Theta and Delta, dueling on a watery plane. Each encounter is set to a musical track. The characters jump to the beat of the track, and dance around in simultaneous defence and offense. When the characters land, they create a ripple in the surface of the water. If you hit your opponents ripple, you take damage. The characters have unique abilities based on their commong mathematical usage. For example, Delta usually stands for rate of change, so the Delta character has a special ripple that she can shrink and expand at will.
                 </p><h6>
                   Chill Out and Freak Out
                 </h6><div class="break"></div><p>
