Fix typo commong -> common

--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
                   Martial Dance
                 </h6><div class="break"></div>
                 <p>
-                Ripples was developed in 2016 by a team of two designers, three producers, an artist, and three programmers. It is an elegant, stylish action game for one or two players. Players play as mathematical symbols, like Theta and Delta, dueling on a watery plane. Each encounter is set to a musical track. The characters jump to the beat of the track, and dance around in simultaneous defence and offense. When the characters land, they create a ripple in the surface of the water. If you hit your opponents ripple, you take damage. The characters have unique abilities based on their commong mathematical usage. For example, Delta usually stands for rate of change, so the Delta character has a special ripple that she can shrink and expand at will.
+                Ripples was developed in 2016 by a team of two designers, three producers, an artist, and three programmers. It is an elegant, stylish action game for one or two players. Players play as mathematical symbols, like Theta and Delta, dueling on a watery plane. Each encounter is set to a musical track. The characters jump to the beat of the track, and dance around in simultaneous defence and offense. When the characters land, they create a ripple in the surface of the water. If you hit your opponents ripple, you take damage. The characters have unique abilities based on their common mathematical usage. For example, Delta usually stands for rate of change, so the Delta character has a special ripple that she can shrink and expand at will.
                 </p><h6>
                   Chill Out and Freak Out
                 </h6><div class="break"></div><p>
