Add primitive scaling

--- a/games/sr/index.html
+++ b/games/sr/index.html
@@ -16,12 +16,12 @@
 
 var config = {
     type: Phaser.AUTO,
-    width: 800,
-    height: 600,
+    width: window.innerWidth * window.devicePixelRatio,
+    height: window.innerHeight * window.devicePixelRatio,
     physics: {
         default: 'matter',
         matter: {
-            gravity: { y: 0.5 },
+            gravity: { y: 0.8 },
             debug: true
         }
     },
@@ -58,29 +58,40 @@ function preload ()
 
 function create ()
 {
+    var scaleRatio = window.devicePixelRatio;
+    var canvasW = game.canvas.width;
+    var canvasH = game.canvas.height;
+    var worldCenterX = canvasW / 2;
+    var worldCenterY = canvasH / 2;
+
     //Set world bounds
     this.matter.world.setBounds();
 
     //  A simple background for our game
-    this.add.image(400, 300, 'sky');
+    this.add.image(worldCenterX, worldCenterY, 'sky').setScale(scaleRatio);
 
     //  Here we create the ground.
     //  Scale it to fit the width of the game (the original sprite is 400x32 in size)
-    this.matter.add.image(400, 568, 'ground', null, { isStatic: true }).setScale(2);
+    var plat = this.matter.add.image(0, 0, 'ground', null, { isStatic: true }).setScale(scaleRatio * 2);
+    plat.setPosition(worldCenterX, canvasH - plat.displayHeight / 2);
 
     //  Now let's create some ledges
-    this.matter.add.image(600, 400, 'ground', null, { isStatic: true });
-    this.matter.add.image(50, 250, 'ground', null, { isStatic: true });
-    this.matter.add.image(750, 220, 'ground', null, { isStatic: true });
+    plat = this.matter.add.image(0, 0, 'ground', null, { isStatic: true }).setScale(scaleRatio);
+    plat.setPosition(canvasW - plat.displayWidth / 2 - 100, canvasH - 250);
+    plat = this.matter.add.image(50, 250, 'ground', null, { isStatic: true }).setScale(scaleRatio);
+    plat.setPosition(plat.displayWidth / 2, canvasH - 375);
+    plat = this.matter.add.image(750, 220, 'ground', null, { isStatic: true }).setScale(scaleRatio);
+    plat.setPosition(canvasW - plat.displayWidth / 2, canvasH - 425);
 
     // The player and its settings
-    player = this.matter.add.sprite(100, 450, 'square');
+    player = this.matter.add.sprite(worldCenterX, worldCenterY, 'square').setScale(scaleRatio);
     player.setBody({
         type: 'rectangle'
         ,width: 32
         ,height: 32
     });
-    player.setBounce(0.1);
+    player.setBounce(0.01);
+    player.setFrictionAir(0.001);
 
     /*
     //  Some stars to collect, 12 in total, evenly spaced 70 pixels apart along the x axis
@@ -137,11 +148,11 @@ function create ()
                 //angleDeg = dirX * 0.1;
                 if(dirX < 0)
                 {
-                    angleDeg = -0.12;
+                    angleDeg = -0.08;
                 }
                 else
                 {
-                    angleDeg = 0.12;
+                    angleDeg = 0.08;
                 }
             }
 
