Debugging touch events not working on mobile anymore

--- a/games/sr/index.html
+++ b/games/sr/index.html
@@ -149,6 +149,7 @@ function create ()
 
     // Set up input
     this.input.on("pointerdown", function (pointer) {
+        console.log(pointer.id);
         if(pointer.id === 0)
         {
             pressX = pointer.x;
