--- a/games/sr/index.html
+++ b/games/sr/index.html
@@ -149,6 +149,7 @@ function create ()
 
     // Set up input
     this.input.on("pointerdown", function (pointer) {
+        console.log(pointer.id);
         pressX = pointer.x;
         pressY = pointer.y;
     }, this);
