Test forcing canvas

--- a/games/sr/index.html
+++ b/games/sr/index.html
@@ -36,7 +36,7 @@ var finalSafeX = finalWidth * 0.1;
 var finalSafeY = finalHeight * 0.1;
 
 var config = {
-    type: Phaser.AUTO,
+    type: Phaser.CANVAS,
     width: finalWidth,
     height: finalHeight,
     physics: {
